# obs-studio

.github/workflows/: build-project.yaml
cmake/common/: versionconfig.cmake
plugins/: CMakeLists.txt
plugins/mediafoundation/: CMakeLists.txt
plugins/mediafoundation/capture/: CMakeLists.txt  mf-plugin.cpp  win-mf.cpp
plugins/mediafoundation/capture/cmake/windows/: obs-module.rc.in
plugins/mediafoundation/capture/libmfcapture/source/: mfcapture.rc.in
